# boba_trader

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.docker/: Dockerfile
.github/: dependabot.yml
boba_trader/: main.py
boba_trader/adapter/fxcm/: data.py
boba_trader/adapter/ig/: execution.py  providers.py
boba_trader/strategy/moving_avarages_neural_network/: config.py  strategy.py
tests/unit/strategy/moving_avarages_neural_network/: test_strategy.py
