[tool.poetry]
name = "boba_trader"
version = "0.1.0"
description = ""
authors = ["Kacper Wojtaszczyk <kacper.wojtaszczyk95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
nautilus-trader = "^1.202.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra -q"
pythonpath = "boba_trader"
testpaths = ["tests"]

[tool.black]
line-length = 120
target-version = ['py311']
